# kaspa-miner

./: .rustfmt.toml  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  deploy.yaml  docker.yaml
docker/: Dockerfile  build.sh
integrations/hiveos/: build.sh  createmanifest.sh  h-config.sh  h-run.sh  h-stats.sh
kaspa-cuda-native/src/: kaspa-cuda.cu  keccak-tiny-unrolled.c  keccak-tiny.c
plugins/: README.md
plugins/cuda/: Cargo.toml  README.md
plugins/cuda/kaspa-cuda-native/src/: kaspa-cuda.cu  keccak-tiny-unrolled.c  keccak-tiny.c  keccak-tiny.h  xoshiro256starstar.c
plugins/cuda/resources/: kaspa-cuda-sm20.ptx  kaspa-cuda-sm30.ptx  kaspa-cuda-sm61.ptx  kaspa-cuda-sm75.ptx  kaspa-cuda-sm86.ptx
plugins/cuda/src/: cli.rs  lib.rs  worker.rs
plugins/opencl/: Cargo.toml  README.md
plugins/opencl/resources/: kaspa-opencl.cl
plugins/opencl/src/: cli.rs  lib.rs  opencl.rs  worker.rs
plugins/work_manager/: Cargo.toml
plugins/work_manager/src/: lib.rs  xoshiro256starstar.rs
proto/: messages.proto  p2p.proto  rpc.proto
resources/: kaspa-cuda-native.ptx  kaspa-cuda-sm20.ptx  kaspa-cuda-sm30.ptx  kaspa-cuda-sm61.ptx  kaspa-opencl.cl
src/: cli.rs  client.rs  gpu.rs  kaspad_messages.rs  keccakf1600_x86-64-mingw.s  lib.rs  main.rs  miner.rs  pow.rs  swap_rust.rs  target.rs  watch.rs  xoshiro256starstar.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
src/gpu/: cuda.rs  opencl.rs  xoshiro256starstar.rs
src/pow/: hasher.rs  heavy_hash.rs  keccak.rs  xoshiro.rs
