[package]
name = "kaspa-miner"
version = "0.2.1"
edition = "2021"
license = "MIT/Apache-2.0"
authors = ["Elichai <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/kaspa-miner"
readme = "README.md"
description = "A Kaspa high performance CPU miner"
categories = ["command-line-utilities"]
keywords = ["blockchain", "cli"]
include = [
    "src/**/*.rs",
    "src/**/*.s",
    "proto/**",
    "Cargo.toml",
    "Cargo.lock",
    "build.rs",
    "LICENSE-MIT",
    "LICENSE-APACHE",
    "README.md",
]

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.11"
tokio-stream = "0.1"
num_cpus = "1"
rand = "0.8"
blake2b_simd = "1.0.0"
clap = { version = "4", features = ["derive", "color"] }
log = "0.4"
env_logger = "0.10"
keccak = { version = "0.1", optional = true }
parking = { package = "parking_lot", version = "0.12", optional = true }
shuttle = { version = "0.6", optional = true }

[features]
default = ["parking_lot"]
parking_lot = ["parking", "tokio/parking_lot"]
bench = []
no-asm = ["keccak"]
[target.'cfg(any(not(target_arch = "x86_64"), target_os = "windows"))'.dependencies]
keccak = "0.1"

[profile.release]
lto = true
codegen-units = 1

[build-dependencies]
tonic-build = { version = "0.9", default-features = false, features = ["prost", "transport"] }
cc = "1"

[dev-dependencies]
sha3 = "0.10"
