[package]
name = "kaspacuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
work_manager = {path = "../work_manager" }
cust ="0.2"
log = "0.4"
rand = "0.8"
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"

[lib]
crate-type = ["cdylib", "rlib"]
